prometheus-operator/resources/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/app-root: "/"
spec:
  tls:
  - hosts:
    - grafana.apps.argoproj.io
    secretName: grafana-tls
  rules:
  - host: grafana.apps.argoproj.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-operator-grafana
            port:
              number: 80
